--- a/package.json
+++ b/package.json
@@ -23,14 +23,20 @@
   "homepage": "https://github.com/fusebit/everyauth-express#readme",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.23",
+    "@types/superagent": "^4.1.15",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
     "eslint": "^8.12.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-security": "^1.4.0",
-    "express": "^4.17.3",
     "prettier": "^2.0.5",
     "typescript": "^4.6.3"
+  },
+  "dependencies": {
+    "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
+    "superagent": "^7.1.2"
   }
 }
