--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc -b",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:setup": "scripts/test/populateTestProfiles.sh",
     "prettier:fix": "git ls-tree -r `git branch --show-current` --name-only | grep -E '.[tj]?sx?$|.yaml$|.json$' | xargs -P 1 prettier --write",
     "prettier:check": "git ls-tree -r `git branch --show-current` --name-only | grep -E '.[tj]?sx?$|.yaml$|.json$' | xargs -P 1 -I \"{}\" sh -c '[ -f {} ] && echo {} || true' | xargs prettier --check",
     "lint:check": "eslint . --ext .ts --color --ignore-path .eslintignore",
@@ -22,7 +23,9 @@
   },
   "homepage": "https://github.com/fusebit/everyauth-express#readme",
   "devDependencies": {
+    "@slack/web-api": "^6.7.1",
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.4.1",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.23",
     "@types/superagent": "^4.1.15",
@@ -31,7 +34,11 @@
     "eslint": "^8.12.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-security": "^1.4.0",
+    "http-terminator": "^3.2.0",
+    "jest": "^27.5.1",
+    "open": "^8.4.0",
     "prettier": "^2.0.5",
+    "ts-jest": "^27.1.4",
     "typescript": "^4.6.3"
   },
   "dependencies": {
