--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/fusebit/everyauth-express#readme",
   "devDependencies": {
     "@slack/web-api": "^6.7.1",
+    "@types/debug": "^4.1.7",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
     "@types/jsonwebtoken": "^8.5.8",
@@ -42,6 +43,7 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
+    "debug": "^4.3.4",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "superagent": "^7.1.2"
