--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
   "name": "@fusebit/everyauth-express",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Everyauth is the easiest way to call third party APIs from your app without learning OAuth.",
-  "main": "index.js",
+  "main": "libc/index.js",
+  "files": [
+    "libc/**/*"
+  ],
   "scripts": {
     "build": "tsc -b",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --testPathIgnorePatterns test/manual",
+    "test:setup": "scripts/test/populateTestProfiles.sh",
+    "test:manual": "jest test/manual",
     "prettier:fix": "git ls-tree -r `git branch --show-current` --name-only | grep -E '.[tj]?sx?$|.yaml$|.json$' | xargs -P 1 prettier --write",
     "prettier:check": "git ls-tree -r `git branch --show-current` --name-only | grep -E '.[tj]?sx?$|.yaml$|.json$' | xargs -P 1 -I \"{}\" sh -c '[ -f {} ] && echo {} || true' | xargs prettier --check",
     "lint:check": "eslint . --ext .ts --color --ignore-path .eslintignore",
-    "lint:fix": "eslint . --ext .ts --color --fix --ignore-path .eslintignore"
+    "lint:fix": "eslint . --ext .ts --color --fix --ignore-path .eslintignore",
+    "identities:clear": "scripts/utility/removeIdentities.sh"
   },
   "repository": {
     "type": "git",
@@ -22,15 +28,29 @@
   },
   "homepage": "https://github.com/fusebit/everyauth-express#readme",
   "devDependencies": {
+    "@slack/web-api": "^6.7.1",
+    "@types/debug": "^4.1.7",
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.4.1",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.23",
+    "@types/superagent": "^4.1.15",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
     "eslint": "^8.12.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-security": "^1.4.0",
-    "express": "^4.17.3",
+    "http-terminator": "^3.2.0",
+    "jest": "^27.5.1",
+    "open": "^8.4.0",
     "prettier": "^2.0.5",
+    "ts-jest": "^27.1.4",
     "typescript": "^4.6.3"
+  },
+  "dependencies": {
+    "debug": "^4.3.4",
+    "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
+    "superagent": "^7.1.1"
   }
 }
