--- a/examples/github-oauth/package.json
+++ b/examples/github-oauth/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@fusebit/everyauth-express": "^1.0.3",
+    "cookie-session": "^2.0.0",
     "express": "^4.17.3",
     "octokit": "^1.7.1",
     "pug": "^3.0.2",
