--- a/examples/googlecalendar/package.json
+++ b/examples/googlecalendar/package.json
@@ -21,6 +21,7 @@
     "everyauth": "^0.4.9",
     "express": "^4.17.3",
     "googleapis": "^100.0.0",
+    "moment": "^2.29.3",
     "mustache": "^4.2.0",
     "mustache-express": "^1.3.2",
     "uuid": "^8.3.2"
