--- a/examples/salesforce/package.json
+++ b/examples/salesforce/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "https://fusebit.io",
+  "author": "Fusebit, Inc",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.0",
