--- a/examples/hubspot/package.json
+++ b/examples/hubspot/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@hubspot/api-client": "^6.0.1-beta.6",
-    "express": "^4.18.0"
+    "express": "^4.18.0",
+    "@fusebit/everyauth-express": "*"
   }
 }
