--- a/examples/salesforce/package.json
+++ b/examples/salesforce/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.0",
-    "jsforce": "^1.11.0"
+    "jsforce": "^1.11.0",
+    "@fusebit/everyauth-express": "*"
   }
 }
