Remove unused middleware

--- a/examples/gitlab/package.json
+++ b/examples/gitlab/package.json
@@ -10,7 +10,7 @@
   "author": "Fusebit, Inc.",
   "license": "ISC",
   "dependencies": {
-    "@fusebit/everyauth-express": "^1.0.3",
+    "@fusebit/everyauth-express": "*",
     "@gitbeaker/node": "^35.6.0",
     "cookie-session": "^2.0.0",
     "express": "^4.17.3",
