--- a/examples/github-oauth/package.json
+++ b/examples/github-oauth/package.json
@@ -11,7 +11,7 @@
   "author": "Fusebit, Inc.",
   "license": "ISC",
   "dependencies": {
-    "@fusebit/everyauth-express": "^1.0.3",
+    "@fusebit/everyauth-express": "*",
     "cookie-session": "^2.0.0",
     "express": "^4.17.3",
     "octokit": "^1.7.1",
