--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
   "name": "@fusebit/everyauth-express",
-  "version": "2.1.0",
+  "version": "2.1.1",
   "description": "EveryAuth is the easiest way for your app to access APIs like Slack, Salesforce, or Github.",
   "main": "libc/index.js",
-  "files": [
-    "libc/**/*"
-  ],
+  "files": ["libc/**/*"],
   "scripts": {
     "build": "tsc -b",
     "test": "jest --testPathIgnorePatterns test/manual",
