--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "homepage": "https://github.com/fusebit/everyauth-express#readme",
   "devDependencies": {
+    "@prettier/plugin-pug": "^2.0.0",
     "@slack/web-api": "^6.7.1",
     "@types/debug": "^4.1.7",
     "@types/express": "^4.17.13",
