--- a/examples/pagerduty/package.json
+++ b/examples/pagerduty/package.json
@@ -5,7 +5,8 @@
   "description": "Use PD API with EveryAuth",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "serve": "nodemon index.js"
   },
   "keywords": [],
   "author": "Fusebit, Inc.",
