--- a/examples/slack/package.json
+++ b/examples/slack/package.json
@@ -11,7 +11,7 @@
   "author": "Fusebit, Inc.",
   "license": "ISC",
   "dependencies": {
-    "@fusebit/everyauth-express": "^1.0.3",
+    "@fusebit/everyauth-express": "*",
     "@slack/web-api": "^6.7.1",
     "cookie-session": "^2.0.0",
     "express": "^4.17.3",
