--- a/examples/googlecalendar/package.json
+++ b/examples/googlecalendar/package.json
@@ -14,13 +14,11 @@
   "author": "Shehzad Akbar",
   "license": "ISC",
   "dependencies": {
-    "@fusebit/everyauth-cli": "^1.23.5",
-    "@fusebit/everyauth-express": "^1.0.3",
-    "@slack/web-api": "^6.7.1",
+    "@fusebit/everyauth-express": "*",
     "cookie-session": "^2.0.0",
-    "everyauth": "^0.4.9",
     "express": "^4.17.3",
     "googleapis": "^100.0.0",
+    "moment": "^2.29.3",
     "mustache": "^4.2.0",
     "mustache-express": "^1.3.2",
     "uuid": "^8.3.2"
