--- a/examples/asana-googlecalendar/package.json
+++ b/examples/asana-googlecalendar/package.json
@@ -6,7 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "@fusebit/everyauth-express": "^2.0.2",
+    "@fusebit/everyauth-express": "*",
     "asana": "^0.18.6",
     "cookie-parser": "~1.4.4",
     "cookie-session": "^2.0.0",
