--- a/examples/pagerduty/package.json
+++ b/examples/pagerduty/package.json
@@ -6,17 +6,20 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "nodemon index.js"
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "Fusebit, Inc.",
   "license": "ISC",
   "dependencies": {
-    "@fusebit/everyauth-express": "^1.0.3",
+    "@fusebit/everyauth-express": "*",
     "@pagerduty/pdjs": "^2.2.4",
     "cookie-session": "^2.0.0",
     "express": "^4.17.3",
     "pug": "^3.0.2",
     "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
   }
 }
